--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
       <artifactId>sesame-rio-trig</artifactId>
       <version>2.7.0-beta1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
   </dependencies>
 </project>
