--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.tkuhn</groupId>
-  <artifactId>hashrdf</artifactId>
+  <artifactId>hashuri</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>hashrdf</name>
+  <name>hashuri</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
