--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,10 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.1</version>
     </dependency>
+    <dependency>
+      <groupId>ch.tkuhn</groupId>
+      <artifactId>nanopub</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
