--- a/pom.xml
+++ b/pom.xml
@@ -43,32 +43,32 @@
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-trig</artifactId>
-      <version>2.7.0-beta1</version>
+      <version>2.7.7</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-rdfxml</artifactId>
-      <version>2.7.0-beta1</version>
+      <version>2.7.7</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-turtle</artifactId>
-      <version>2.7.0-beta1</version>
+      <version>2.7.7</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-trix</artifactId>
-      <version>2.7.0-beta1</version>
+      <version>2.7.7</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-nquads</artifactId>
-      <version>2.7.0-beta1</version>
+      <version>2.7.7</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-repository-sparql</artifactId>
-      <version>2.7.0-beta1</version>
+      <version>2.7.7</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
