--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
+      <artifactId>sesame-rio-ntriples</artifactId>
+      <version>2.7.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-trix</artifactId>
       <version>2.7.7</version>
     </dependency>
