--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
       <version>3.1</version>
     </dependency>
     <dependency>
-      <groupId>ch.tkuhn</groupId>
+      <groupId>org.nanopub</groupId>
       <artifactId>nanopub</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
