--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
       <version>3.1</version>
     </dependency>
     <dependency>
+      <groupId>com.google.code.externalsortinginjava</groupId>
+      <artifactId>externalsortinginjava</artifactId>
+      <version>0.1.8</version>
+    </dependency>
+    <dependency>
       <groupId>org.nanopub</groupId>
       <artifactId>nanopub</artifactId>
       <version>1.0-SNAPSHOT</version>
