--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,17 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sesame.version>2.7.7</sesame.version>
+    <!-- <sesame.version>2.7.9-SNAPSHOT</sesame.version> -->
   </properties>
+  <repositories>
+    <!--
+    <repository>
+      <id>OSS Sonatype Snapshots</id>
+      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
+    -->
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -43,37 +53,37 @@
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-trig</artifactId>
-      <version>2.7.7</version>
+      <version>${sesame.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-rdfxml</artifactId>
-      <version>2.7.7</version>
+      <version>${sesame.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-turtle</artifactId>
-      <version>2.7.7</version>
+      <version>${sesame.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-ntriples</artifactId>
-      <version>2.7.7</version>
+      <version>${sesame.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-trix</artifactId>
-      <version>2.7.7</version>
+      <version>${sesame.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-nquads</artifactId>
-      <version>2.7.7</version>
+      <version>${sesame.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-repository-sparql</artifactId>
-      <version>2.7.7</version>
+      <version>${sesame.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
