--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,8 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <sesame.version>2.7.7</sesame.version>
-    <!-- <sesame.version>2.7.9-SNAPSHOT</sesame.version> -->
+    <sesame.version>2.7.11</sesame.version>
   </properties>
-  <repositories>
-    <!--
-    <repository>
-      <id>OSS Sonatype Snapshots</id>
-      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-    </repository>
-    -->
-  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -98,17 +89,33 @@
     <dependency>
       <groupId>org.nanopub</groupId>
       <artifactId>nanopub</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.8</version>
+        <executions>
+          <execution>
+            <id>build-classpath</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>build-classpath</goal>
+            </goals>
+            <configuration>
+              <outputFile>classpath.txt</outputFile>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <archive>
             <manifest>
-              <mainClass>ch.tkuhn.hashuri.Run</mainClass>
+              <mainClass>net.trustyuri.Run</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
