--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <!-- 1.6 does not work because of java.nio.file dependency -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <sesame.version>2.7.12</sesame.version>
+    <sesame.version>2.8.0</sesame.version>
   </properties>
   <dependencies>
     <dependency>
@@ -107,7 +107,7 @@
     </developer>
   </developers>
   <build>
-    <pluginManagement><plugins>
+    <plugins>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.8</version>
@@ -124,6 +124,8 @@
           </execution>
         </executions>
       </plugin>
+    </plugins>
+    <pluginManagement><plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
