--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,16 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.2.2</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+        <configuration>
+          <excludes>
+            <exclude>**/log4j.properties</exclude>
+          </excludes>
+		</configuration>
+	  </plugin>
     </plugins>
   </build>
   <distributionManagement>
