--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>com.sun.activation</groupId>
-      <artifactId>javax.activation</artifactId>
-      <version>1.2.0</version>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>javax.xml.bind</groupId>
