--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>net.trustyuri</groupId>
   <artifactId>trustyuri</artifactId>
   <packaging>jar</packaging>
-  <version>1.18-SNAPSHOT</version>
+  <version>1.18</version>
   <name>trustyuri</name>
   <description>Trusty URI implementation for Java</description>
   <url>http://trustyuri.net</url>
@@ -107,7 +107,7 @@
     <url>https://github.com/trustyuri/trustyuri-java</url>
     <connection>scm:git:git@github.com:trustyuri/trustyuri-java.git</connection>
     <developerConnection>scm:git:git@github.com:trustyuri/trustyuri-java.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>trustyuri-1.18</tag>
   </scm>
   <developers>
     <developer>
