--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <!-- 1.6 does not work because of java.nio.file dependency -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <rdf4j.version>5.0.0-M1</rdf4j.version>
+    <rdf4j.version>5.0.2</rdf4j.version>
   </properties>
   <dependencies>
     <dependency>
@@ -45,17 +45,17 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.2</version>
+      <version>1.3.4</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.14.0</version>
+      <version>2.17.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>2.0.9</version>
+      <version>2.1.0-alpha1</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.13.0</version>
+      <version>3.17.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.externalsortinginjava</groupId>
