--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>net.trustyuri</groupId>
   <artifactId>trustyuri</artifactId>
   <packaging>jar</packaging>
-  <version>1.19-SNAPSHOT</version>
+  <version>1.19</version>
   <name>trustyuri</name>
   <description>Trusty URI implementation for Java</description>
   <url>http://trustyuri.net</url>
@@ -19,8 +19,8 @@
     </license>
   </licenses>
   <properties>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <!-- 1.6 does not work because of java.nio.file dependency -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <rdf4j.version>5.0.2</rdf4j.version>
@@ -107,7 +107,7 @@
     <url>https://github.com/trustyuri/trustyuri-java</url>
     <connection>scm:git:git@github.com:trustyuri/trustyuri-java.git</connection>
     <developerConnection>scm:git:git@github.com:trustyuri/trustyuri-java.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>trustyuri-1.19</tag>
   </scm>
   <developers>
     <developer>
